--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4",
-    "react-router-dom": "^5.1.2",
     "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
-    "material-ui": "^0.20.2"
+    "cors": "^2.8.5",
+    "material-ui": "^0.20.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
